Landing page alignment fixes + Success modal css updates

--- a/src/assets/styles/Modules/HeroBanner.scss
+++ b/src/assets/styles/Modules/HeroBanner.scss
@@ -12,8 +12,27 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             padding: 50px;
+            .app-logo-desktop {
+                display: block;
+                max-width: 130px;
+                border-radius: 100px;
+                margin-bottom: 30px;
+                border-radius: 50%;
+                box-shadow:
+                    0 0 15px $lightpink,
+                    0 0 15px $darkpuple;
+            }
+            .tagline {
+                // margin: 0 20px 0 30px;
+                text-align: center;
+            }
+            // .tagline-wrapper {
+            //     display: flex;
+            //     justify-content: space-between;
+            //     margin-bottom: 40px;
+            // }
             .button-wrapper {
                 display: flex;
                 justify-content: space-between;
@@ -56,6 +75,9 @@
             .content-col {
                 align-items: center;
                 padding: 50px;
+                .app-logo-desktop {
+                    display: none;
+                }
                 .button-wrapper {
                     margin-top: 30px;
                     .link-btn {
